# mini-devin

./: .dockerignore  .env.example  .gitignore  AUTONOMOUS_RUN_REPORT.md  CHANGELOG.md  Dockerfile  Dockerfile.sandbox  ENHANCED_FEATURES.md  LICENSE  OPERATIONS.md  PLAN.md  README.md  _live_autonomous_probe.py  alembic.ini  debug_output.txt  diff_repo.txt  docker-compose.yml  enhanced_demo.py  get_app_details.py  get_deployment_id.py  git_status.txt  implementation_plan.md  landing.html  prod_test.py  pyproject.toml  pytest.ini  railway.toml  screenshot_example.py  server.py  simple_calculator.py  start_desktop.bat  start_mini_devin.bat  test_agent_run.py  test_sandbox_run.py  test_ws.py
.do/: app.yaml
.plodder/: memory_training_plan.json
alembic/: env.py
app/: __init__.py  main.py
docs/: API.md  ARCHITECTURE.md  DEVELOPER.md  GLOBAL_CORPUS.md  KNOWLEDGE_STACK.md  PLATFORM.md  PLODDER_SPECIALIZED_BUILDER.md  SECURITY.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
knowledge_base/: benchmark_lessons.json  benchmark_lessons.md  learned_patterns.md
mini_devin/: __init__.py  cli.py  cli_desktop.py
plodder/: __init__.py
scripts/: bootstrap.py  build_benchmark_dashboard.py  build_project_retrieval_index.py  build_sandbox.sh  check_final_status.py  check_railway_public.ps1  complete_memory_training_day4_7.py  container_entrypoint.py  do_auth_test.sh  do_auth_test2.sh  do_auth_test3.sh  evaluate_retrieval_quality.py  fetch_deployment_details.py  fetch_runtime_logs.py  ingest_global_corpus.py  (+23 more)
(+545 files in other folders)
